--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./asset/css/fontawesome.css">
-  <link rel="stylesheet" href="../mano/create/style.css">
+  <link rel="stylesheet" href="./create/style.css">
 
 
   <!-- Bootstrap CSS -->
@@ -27,10 +27,13 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../mano/create/index.html">Create</a>
+          <a class="nav-link" href="./create/index.html">Create</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./route/index.html">Route</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./edit/index.html">Edit</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownmenu" data-toggle="dropdown" aria-haspopup="true"
@@ -50,36 +53,19 @@
   <div class="container">
     <div class="display">
       <h1>List services</h1>
-      <div class="SFCs" id="result">
+      <div class="SFCs" id="listSvs">
 
       </div>
     </div>
     <div class="create">
       <button onclick="openCreate()" class="btn btn-outline-success">Create</button>
     </div>
-    <div class="edit-container" id="myForm">
-      <div class="form-popup-edit container">
-        <h1>Edit</h1>
-        <div class="form-container form">
-          <label for="nameImageEdit">Name</label><br>
-          <input type="text" id="nameImageEdit" placeholder="Name of image:tag"><br>
-          <label for="nodeEdit">Node</label> <br />
-          <select id="nodeEdit">
-          </select> <br>
-          <label for="routeEdit">Route</label><br>
-          <input type="text" id="routeEdit" placeholder="Route"><br>
-
-          <button type="submit" class="btn btn-outline-success" onclick="editData()">Submit</button>
-          <button type="button" class="btn btn-outline-warning cancel" onclick="closeEdit()">Close</button>
-        </div>
-      </div>
-    </div>
     <div class="create-container" id="create">
       <div class="createSFC container">
         <h1>Create service</h1>
         <div class="form">
           <label for="idService">ID</label><br>
-          <div class="addSvs">
+          <div class="addSvs" id="addSvs">
             <div class="dropdown">
               <input class="dropdown-toggle" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
@@ -88,18 +74,20 @@
                 <span class="dropdown-item" onclick=setData(this)>2</span>
               </div>
             </div>
-            <label for="nameImage">Name</label><br>
-            <input type="text" id="nameImage" placeholder="Name of image:tag"><br>
-            <label for="node">Node</label> <br />
-            <select id="node">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-            </select> <br>
-            <label for="port">Port</label><br>
-            <input type="text" id="port" placeholder="Port"><br>
+            <div class="inforSv">
+              <label for="nameImage">Name</label><br>
+              <input type="text" id="nameImage" placeholder="Name of image:tag"><br>
+              <label for="node">Node</label> <br />
+              <select id="node">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+              </select> <br>
+              <label for="port">Port</label><br>
+              <input type="text" id="port" placeholder="Port"><br>
+            </div>
           </div>
-          <button class="btn btn-group btn-dark add"><i class="fa-solid fa-plus"></i></button>
+          <button class="btn btn-group btn-dark add" onclick="moreService()"><i class="fa-solid fa-plus"></i></button>
           <button class="btn btn-group btn-success" onclick="addService()">ADD</button>
           <button class="btn btn-group btn-warning cancel" onclick="closeCreate()">Close</button>
         </div>
@@ -108,16 +96,16 @@
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="./main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
